# tidyeeg

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/tidyeeg/: __init__.py  _channels.py  core.py  io.py  standardize.py
tests/: conftest.py  test_core.py  test_io.py  test_standardize.py
