[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidyeeg"
version = "0.1.0"
description = "EEG ETL and preprocessing: turn messy, heterogeneous EEG into clean, consistent, model-ready data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "jplgarin", email = "joan.08.es@gmail.com" }]
keywords = ["eeg", "mne", "preprocessing", "etl", "neuroscience", "electroencephalography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "mne>=1.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "mypy>=1.5",
    "edfio>=0.4",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/jplgarin/tidyeeg"
Repository = "https://github.com/jplgarin/tidyeeg"

[tool.hatch.build.targets.wheel]
packages = ["src/tidyeeg"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

# MNE, SciPy and edfio do not ship complete type information.
[[tool.mypy.overrides]]
module = ["mne.*", "scipy.*", "edfio.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
